@@ -5,7 +5,7 @@ use warnings;
 use 5.010_001;
 use Pod::Usage;
 
-use version; our $VERSION = 'v0.6.0';
+use version; our $VERSION = 'v0.6.1';
 
 use App::Koyomi::Worker;
 
